--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,18 +18,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    # Setup Rust
+    # Setup Rust toolchain
     - name: Setup Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        target: x86_64-pc-windows-msvc
+        targets: x86_64-pc-windows-msvc
     
-    # Cache dependencies for faster builds
-    - name: Cache cargo dependencies
-      uses: actions/cache@v3
+    # Cache Cargo dependencies for faster builds
+    - name: Cache Cargo dependencies
+      uses: actions/cache@v4
       with:
         path: |
           ~/.cargo/bin/
@@ -45,68 +42,47 @@ jobs:
     - name: Build release
       run: cargo build --release --target x86_64-pc-windows-msvc
     
-    # Run tests
+    # Run tests to ensure everything works
     - name: Run tests
       run: cargo test --release
     
-    # Rename the executable for clarity
-    - name: Rename executable
+    # Move executable to root for easier access
+    - name: Move executable
       run: |
         move target\x86_64-pc-windows-msvc\release\windows-system-cleaner.exe windows-system-cleaner.exe
     
-    # Upload the executable as an artifact
-    - name: Upload executable
-      uses: actions/upload-artifact@v3
+    # Upload the executable as build artifact
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v4
       with:
         name: windows-system-cleaner
         path: windows-system-cleaner.exe
+        retention-days: 90
     
-    # Create a GitHub release if this is a tag push
-    - name: Create Release
+    # Create GitHub release with the executable
+    - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         files: windows-system-cleaner.exe
         generate_release_notes: true
         draft: false
         prerelease: false
+        name: Release ${{ github.ref_name }}
+        body: |
+          ## Windows System Cleaner ${{ github.ref_name }}
+          
+          ### 🚀 What's New
+          - Safe cleanup of temporary files and browser caches
+          - Supports Chrome, Edge, Firefox, Brave, and Opera
+          - Windows temp directories cleanup
+          - Prefetch and thumbnail cache cleanup
+          
+          ### 📥 Download
+          Download `windows-system-cleaner.exe` below and run as Administrator for best results.
+          
+          ### ⚠️ Requirements
+          - Windows 10/11
+          - Run as Administrator (recommended)
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # Optional: Build for multiple targets
-  build-cross-platform:
-    name: Build Cross Platform
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            executable: windows-system-cleaner.exe
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            executable: windows-system-cleaner
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            executable: windows-system-cleaner
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        target: ${{ matrix.target }}
-    
-    - name: Build
-      run: cargo build --release --target ${{ matrix.target }}
-    
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.target }}
-        path: target/${{ matrix.target }}/release/${{ matrix.executable }}
